add binary operator

--- a/basics/arithmetic.html
+++ b/basics/arithmetic.html
@@ -89,6 +89,11 @@
         let ans5 = num12 + num13
         console.log(ans5) // gives result as a string because one of the variable is of string type
         console.log(Number(num13) + num12)
+
+        // uranary operator 
+        let n1 = "15"
+        let n2 = "15"
+        console.log(+n1 + +n2)
     </script>
 </body>
 
