add unary operator

--- a/basics/arithmetic.html
+++ b/basics/arithmetic.html
@@ -90,7 +90,7 @@
         console.log(ans5) // gives result as a string because one of the variable is of string type
         console.log(Number(num13) + num12)
 
-        // uranary operator 
+        // unary operator ---> convert string to a number
         let n1 = "15"
         let n2 = "15"
         console.log(+n1 + +n2)
