--- a/basics/arithmetic.html
+++ b/basics/arithmetic.html
@@ -94,6 +94,18 @@
         let n1 = "15"
         let n2 = "15"
         console.log(+n1 + +n2)
+
+        // increment and decrement operator
+
+        // increment
+        let counter = 0
+        counter += 1 // counter = counter + 1
+        console.log(counter)
+
+        // decrement
+        let sum = 0
+        sum -= 1
+        console.log(sum)
     </script>
 </body>
 
